--- a/src/components/sections/Bio.astro
+++ b/src/components/sections/Bio.astro
@@ -20,7 +20,7 @@ const { content, class: className = '' } = Astro.props;
   @reference "../../styles/globals.css";
 
   .bio {
-    @apply px-4 pb-4 w-full;
+    @apply pb-4 w-full;
   }
 
   .bio__content {
